--- a/recipes_finder/requirements.txt
+++ b/recipes_finder/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.5.0
 autopep8==1.6.0
 Django==3.2
+djangorestframework==3.13.1
+pep8==1.7.1
+Pillow==9.2.0
 psycopg2==2.9.3
 pycodestyle==2.8.0
 python-decouple==3.6
