--- a/recipes_finder/requirements.txt
+++ b/recipes_finder/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.0
 autopep8==1.6.0
 coverage==6.4.3
 Django==3.2
+django-taggit==3.0.0
 djangorestframework==3.13.1
 pep8==1.7.1
 Pillow==9.2.0
